--- a/index.html
+++ b/index.html
@@ -788,8 +788,9 @@
                     <div class="company-name">مدارس الأقصى</div>
                     <div class="job-period">2023 – حتى الآن</div>
                     <div class="job-description">
+                        <div class="achievement-highlight">✓ برنامج جاهزية مؤسسية لمدة 18 شهرًا بأثر تقديري يصل إلى +132 مليون ريال في قيمة الشركة</div>
                         <ul>
-                            <li>قيادة برنامج جاهزية مؤسسية يمتد لـ18 شهرًا تأهبًا للدخول للسوق المالية، شمل إعادة الهيكلة وبناء البنية المؤسسية وتطوير نموذج الفصل بين "المدرسة" و"الشركة"، وإعداد دراسات الإدراج والشراكات.</li>
+                            <li>قيادة برنامج جاهزية مؤسسية تأهبًا للدخول للسوق المالية، شمل إعادة الهيكلة وبناء البنية المؤسسية وتطوير نموذج الفصل بين "المدرسة" و"الشركة"، وإعداد دراسات الإدراج والشراكات.</li>
                             <li>إعداد وتحليل نموذج التشغيل لمشروع المدرسة الجديدة في الرياض وتقييم جدواه وأثره على قيمة الشركة واستدامة التوسع، ونتج عنه دعم قرار التوسع وفق نموذج استثماري أكثر أمانًا وربحية.</li>
                             <li>تطوير نموذج تشغيل متقدم لمدارس الأقصى قائم على مقارنة النماذج العالمية ومؤشرات الجودة التعليمية، وقدّم توصية استراتيجية لمجلس الإدارة بنموذج تشغيلي أكثر كفاءة وربحية.</li>
                             <li>إدارة التواصل والتفاوض مع مجموعات تشغيل عالمية وشركات استشارات تعليمية، وتقييم خيارات التشغيل (إدارة – استئجار – تشغيل – شراكات).</li>
@@ -831,6 +832,8 @@
                     <div class="company-name">جمعية ملاك المطاعم والمقاهي</div>
                     <div class="job-period">2020 – حتى الآن</div>
                     <div class="job-description">
+                        <div class="achievement-highlight">✓ المساهمة في تأسيس أول جمعية مهنية مرخصة لملاك المطاعم والمقاهي في المملكة</div>
+                        <div class="achievement-highlight">✓ تحويل شبكة غير رسمية (آلاف الملاك) إلى كيان مؤسسي منظم بإطار حوكمة رسمي</div>
                         <ul>
                             <li>لعبت دورًا محوريًا في تأسيس وتنظيم منتدى الضيافة وجمع قادة القطاع وأصحاب المصلحة، مما ساهم في إطلاق منصة وطنية لدعم الابتكار وتبادل الخبرات.</li>
                             <li>الإشراف على المبادرات الاستراتيجية الموجهة للزوار والمهتمين بقطاع الضيافة، وأدى ذلك إلى تعزيز تجربة الزائر وتحسين جودة الخدمات.</li>
@@ -844,10 +847,11 @@
                     <div class="company-name">شركة قهوة أثيل للاستثمار</div>
                     <div class="job-period">2010 – 2025</div>
                     <div class="job-description">
+                        <div class="achievement-highlight">✓ قيادة عملية تفاوض اندماج لسلسلة مقاهي تضم أكثر من 60 فرعًا داخل وخارج المملكة</div>
                         <ul>
                             <li>تأسيس وتطوير شركة استثمار وتشغيل في قطاع المقاهي وبناء نموذج تجاري وهوية وتجربة عميل مستدامة على مدى خمسة عشر عامًا، ساهمت في ترسيخ العلامة كأحد اللاعبين المؤثرين في سوق المقاهي المحلية.</li>
                             <li>قيادة مشروع اندماج بين اثنين من أكبر مشغّلي المقاهي في المملكة، شمل التحليل المالي والتشغيلي وبناء التصور الاستراتيجي للكيان الموحد.</li>
-                            <li>الإشراف على إعداد ملف استحواذ استراتيجي على سلسلة مقاهٍ كبرى تقدّر قيمتها بمئات الملايين، متضمّنًا التقييم المالي وتحليل المخاطر والوضع التنافسي.</li>
+                            <li>الإشراف على إعداد ملف استحواذ استراتيجي على سلسلة مقاهِ كبرى تقدّر قيمتها بمئات الملايين، متضمّنًا التقييم المالي وتحليل المخاطر والوضع التنافسي.</li>
                             <li>قيادة خطط النمو والتوسع وتطوير المنتجات وفقًا لاتجاهات السوق وتحسين الكفاءة التشغيلية، نتج عنها رفع الربحية وزيادة عدد الفروع.</li>
                             <li>بناء وإدارة فرق عمل احترافية ورفع جاهزيتها التشغيلية من خلال التدريب وتطوير المهارات.</li>
                             <li>تطوير أنظمة وسياسات التشغيل ورفع كفاءة إدارة التكاليف، ما أدى إلى تحسين حدود الربحية واستدامة النمو.</li>
@@ -860,10 +864,11 @@
                     <div class="company-name">الوقف العلمي بجامعة الملك عبدالعزيز</div>
                     <div class="job-period">2012 – 2016</div>
                     <div class="job-description">
+                        <div class="achievement-highlight">✓ متابعة وتنسيق محفظة وقفية تقارب 100 مليون ريال ضمن إطار حوكمي (مجلس النظارة ← لجنة الاستثمار)</div>
                         <ul>
                             <li>الإشراف على أمانة لجنة الاستثمار وتنظيم اجتماعاتها والتواصل مع كبار المستثمرين من أعضاء اللجنة، مما ساهم في رفع جاهزية القرارات عبر إعداد ملفات تحليلية دقيقة.</li>
                             <li>استقطاب وتحليل وتقييم فرص استثمارية متنوعة ورفع توصيات مبنية على دراسات جدوى ومخاطر متقدمة.</li>
-                            <li>إدارة منظومة استثمارية لمحفظة كبيرة ومتنوعة تُقدّر بعشرات الملايين، تتضمن مراجعة العقود، ومتابعة الملكيات، وتحليل الأداء.</li>
+                            <li>إدارة منظومة استثمارية لمحفظة كبيرة ومتنوعة، تتضمن مراجعة العقود، ومتابعة الملكيات، وتحليل الأداء.</li>
                             <li>تمثيل الوقف في المعارض الدولية والندوات وورش العمل، وبناء شبكة علاقات مؤسسية مع جهات محلية وعالمية.</li>
                         </ul>
                     </div>
@@ -874,11 +879,11 @@
                     <div class="company-name">الوقف العلمي بجامعة الملك عبدالعزيز</div>
                     <div class="job-period">2009 – 2012</div>
                     <div class="job-description">
+                        <div class="achievement-highlight">✓ نمو الإيرادات: +600% خلال 3 سنوات</div>
+                        <div class="achievement-highlight">✓ توسّع قاعدة المشتركين: +1,700% وتحويل البرنامج إلى مورد مستدام بحوكمة وتقارير شهرية</div>
                         <ul>
-                            <li>قيادة تطوير برنامج الاستقطاع الشهري لمنسوبي الجامعة وتحقيق نمو يفوق 600% في الإيرادات خلال ثلاث سنوات عبر تصميم برامج تمويل مبتكرة.
-                                <div class="achievement-highlight">✓ نمو الإيرادات: 600% خلال 3 سنوات</div>
-                            </li>
-                            <li>تصميم وإطلاق مبادرة مساهمة الطلاب من مكافآتهم الشهرية، نتج عنها توسّع كبير في عدد المساهمين وبناء قاعدة مانحين مستدامة من فئة الشباب.</li>
+                            <li>قيادة تطوير برنامج الاستقطاع الشهري لمنسوبي الجامعة عبر تصميم برامج تمويل مبتكرة.</li>
+                            <li>تصميم وإطلاق مبادرة مساهمة الطلاب من مكافآتهم الشهرية، وبناء قاعدة مانحين مستدامة من فئة الشباب.</li>
                             <li>تقديم محاضرات توعوية وتفاعلية في القاعات الدراسية لتشجيع الطلاب على المشاركة في مشاريع الوقف.</li>
                             <li>تطوير آليات المتابعة والتواصل وتحسين أنظمة جمع البيانات، مما رفع دقة التقارير المالية.</li>
                         </ul>
@@ -1062,12 +1067,13 @@
                     <div class="company-name">Al-Aqsa Schools</div>
                     <div class="job-period">2023 – Present</div>
                     <div class="job-description">
+                        <div class="achievement-highlight">✓ 18-month institutional readiness program with an estimated impact of up to +SAR 132 million in company valuation</div>
                         <ul>
-                            <li>Led an 18-month readiness program preparing the company for potential capital-market entry.</li>
-                            <li>Developed and analyzed the operating model for the Riyadh school project.</li>
-                            <li>Designed an advanced educational operating model based on global benchmarks.</li>
-                            <li>Managed negotiations with global operators and education advisory firms.</li>
-                            <li>Led the school's participation in the Education Investment Conference.</li>
+                            <li>Led an institutional readiness program preparing for capital market entry, including restructuring, building institutional infrastructure, developing the separation model between "school" and "company", and preparing listing and partnership studies.</li>
+                            <li>Prepared and analyzed the operating model for the new school project in Riyadh, evaluating its feasibility and impact on company value and expansion sustainability, resulting in support for expansion decision according to a safer and more profitable investment model.</li>
+                            <li>Developed an advanced operating model for Al-Aqsa Schools based on comparison of global models and educational quality indicators, presenting a strategic recommendation to the board for a more efficient and profitable operating model.</li>
+                            <li>Managed communication and negotiation with global operating groups and educational consulting firms, evaluating operating options (management – leasing – operation – partnerships).</li>
+                            <li>Led the initiative to register Al-Aqsa Schools in the Education Investment Conference and managed speaker registration procedures, enhancing the school’s presence before regional investors and international operators.</li>
                         </ul>
                     </div>
                 </div>
@@ -1105,10 +1111,12 @@
                     <div class="company-name">Saudi Restaurants & Cafés Owners Association</div>
                     <div class="job-period">2020 – Present</div>
                     <div class="job-description">
+                        <div class="achievement-highlight">✓ Contributed to establishing the first licensed professional association for restaurant and café owners in the Kingdom</div>
+                        <div class="achievement-highlight">✓ Transformed an informal network (thousands of owners) into an organized institutional entity with a formal governance framework</div>
                         <ul>
-                            <li>Played a leading role in establishing and organizing the Hospitality Forum.</li>
-                            <li>Supervised strategic initiatives that enhanced visitor experience.</li>
-                            <li>Led the separation and registration of "Hospitality Leaders" as an independent association.</li>
+                            <li>Played a pivotal role in establishing and organizing the Hospitality Forum, gathering sector leaders and stakeholders, contributing to launching a national platform to support innovation and knowledge exchange.</li>
+                            <li>Supervised strategic initiatives directed at visitors and those interested in the hospitality sector, enhancing visitor experience and improving service quality.</li>
+                            <li>Led the separation and registration process of Hospitality Leaders as an independent association with a governance framework to ensure full operational and regulatory independence.</li>
                         </ul>
                     </div>
                 </div>
@@ -1118,13 +1126,14 @@
                     <div class="company-name">Atheel Coffee Investment Company</div>
                     <div class="job-period">2010 – 2025</div>
                     <div class="job-description">
+                        <div class="achievement-highlight">✓ Led merger negotiation for a café chain with over 60 branches inside and outside the Kingdom</div>
                         <ul>
-                            <li>Founded and developed a major café-sector company over fifteen years.</li>
-                            <li>Led a strategic merger between two of the Kingdom's largest café operators.</li>
-                            <li>Supervised an acquisition file for a major café chain worth hundreds of millions.</li>
-                            <li>Led growth, expansion, and product-development initiatives.</li>
-                            <li>Built and trained high-performance operational teams.</li>
-                            <li>Improved systems and cost-management models increasing profitability.</li>
+                            <li>Founded and developed an investment and operations company in the café sector, building a sustainable business model, brand identity, and customer experience over fifteen years, establishing the brand as a key player in the local café market.</li>
+                            <li>Led a strategic merger project between two of the Kingdom’s largest café operators, including financial and operational analysis and building the strategic vision for the unified entity.</li>
+                            <li>Supervised preparation of a strategic acquisition file for a major café chain valued at hundreds of millions, including financial valuation, risk analysis, and competitive positioning.</li>
+                            <li>Led growth and expansion plans and product development according to market trends and operational efficiency improvement, resulting in increased profitability and branch expansion.</li>
+                            <li>Built and managed professional work teams and raised their operational readiness through training and skills development.</li>
+                            <li>Developed operating systems and policies and improved cost management efficiency, leading to improved profit margins and sustainable growth.</li>
                         </ul>
                     </div>
                 </div>
@@ -1134,11 +1143,12 @@
                     <div class="company-name">Scientific Endowment, King Abdulaziz University</div>
                     <div class="job-period">2012 – 2016</div>
                     <div class="job-description">
+                        <div class="achievement-highlight">✓ Managed and coordinated an endowment portfolio approaching SAR 100 million within a governance framework (Board of Trustees ← Investment Committee)</div>
                         <ul>
-                            <li>Managed the Investment Committee Secretariat and prepared analytical decision files.</li>
-                            <li>Evaluated diverse investment opportunities based on feasibility and risk.</li>
-                            <li>Managed a multi-million diversified portfolio.</li>
-                            <li>Represented the endowment in international events.</li>
+                            <li>Supervised the Investment Committee Secretariat, organized meetings, and communicated with senior investors among committee members, enhancing decision readiness through precise analytical files.</li>
+                            <li>Attracted, analyzed, and evaluated diverse investment opportunities and raised recommendations based on advanced feasibility and risk studies.</li>
+                            <li>Managed an investment system for a large and diversified portfolio, including contract review, ownership tracking, and performance analysis.</li>
+                            <li>Represented the endowment in international exhibitions, seminars, and workshops, building institutional relationships with local and global entities.</li>
                         </ul>
                     </div>
                 </div>
@@ -1148,13 +1158,13 @@
                     <div class="company-name">Scientific Endowment, King Abdulaziz University</div>
                     <div class="job-period">2009 – 2012</div>
                     <div class="job-description">
+                        <div class="achievement-highlight">✓ Revenue Growth: +600% over 3 years</div>
+                        <div class="achievement-highlight">✓ Subscriber Base Expansion: +1,700% and transformed the program into a sustainable revenue stream with governance and monthly reporting</div>
                         <ul>
-                            <li>Achieved over 600% revenue growth through redesigned monthly contribution programs.
-                                <div class="achievement-highlight">✓ Revenue Growth: 600% over 3 years</div>
-                            </li>
-                            <li>Launched student-donation initiatives building a sustainable young donor base.</li>
-                            <li>Delivered awareness lectures encouraging student participation.</li>
-                            <li>Enhanced monitoring, communication, and data-collection processes.</li>
+                            <li>Led development of monthly contribution program for university employees through innovative financing programs.</li>
+                            <li>Designed and launched student donation initiative from monthly stipends, building a sustainable young donor base.</li>
+                            <li>Delivered awareness lectures in classrooms encouraging student participation in endowment projects.</li>
+                            <li>Enhanced monitoring, communication, and data-collection systems, improving financial reporting accuracy.</li>
                         </ul>
                     </div>
                 </div>
