--- a/index.html
+++ b/index.html
@@ -973,6 +973,7 @@
             <div class="section">
                 <h2 class="section-title">العضويات والاعتمادات</h2>
                 <div class="cert-list">
+                    <div class="cert-item">عضو مجلس الأعمال السعودي البيروفي<br><span style="font-size: 0.9em; color: #718096;">اتحاد الغرف التجارية السعودية</span></div>
                     <div class="cert-item">أخصائي تنمية مستدامة في القطاع الخيري</div>
                     <div class="cert-item">أخصائي جودة منظمات غير ربحية</div>
                     <div class="cert-item">عضو الشبكة الإقليمية للمسئولية المجتمعية</div>
