--- a/index.html
+++ b/index.html
@@ -1253,6 +1253,7 @@
             <div class="section">
                 <h2 class="section-title">Memberships & Certifications</h2>
                 <div class="cert-list">
+                    <div class="cert-item">Member – Saudi-Peruvian Business Council<br><span style="font-size: 0.9em; color: #718096;">Union of Saudi Chambers of Commerce</span></div>
                     <div class="cert-item">Sustainable Development Specialist – Charitable Sector</div>
                     <div class="cert-item">Nonprofit Organizational Quality Specialist</div>
                     <div class="cert-item">Member – Regional CSR Network</div>
